[gd_scene load_steps=19 format=3 uid="uid://vjbjwr6k3koe"]

[ext_resource type="Script" path="res://entities/enemies/enemy.gd" id="1_bpcrd"]
[ext_resource type="Texture2D" uid="uid://dpj0bd1ba6sm8" path="res://temp_assets/enemies/goblin/goblin_idle_anim_f0.png" id="1_i7qfw"]
[ext_resource type="Texture2D" uid="uid://dgt30q1c0t68h" path="res://temp_assets/enemies/goblin/goblin_dead_anim_f0.png" id="1_tfwga"]
[ext_resource type="Texture2D" uid="uid://ckt2ckgx502wv" path="res://temp_assets/enemies/goblin/goblin_idle_anim_f1.png" id="2_ya6ik"]
[ext_resource type="Texture2D" uid="uid://bkhka1bymkk4f" path="res://temp_assets/enemies/goblin/goblin_idle_anim_f2.png" id="3_q5jh6"]
[ext_resource type="Texture2D" uid="uid://cpapq8r7i6fv3" path="res://temp_assets/enemies/goblin/goblin_idle_anim_f3.png" id="4_ss7p3"]
[ext_resource type="Texture2D" uid="uid://dneu4qysyw1cg" path="res://temp_assets/enemies/goblin/goblin_run_anim_f0.png" id="6_mvs22"]
[ext_resource type="Texture2D" uid="uid://dasobk16s1fun" path="res://temp_assets/enemies/goblin/goblin_run_anim_f1.png" id="7_fk03e"]
[ext_resource type="Texture2D" uid="uid://dbslbq56e7cnk" path="res://temp_assets/enemies/goblin/goblin_run_anim_f2.png" id="8_5bmjy"]
[ext_resource type="Texture2D" uid="uid://hdm4jfrk5gqv" path="res://temp_assets/enemies/goblin/goblin_run_anim_f3.png" id="9_0lfdx"]
[ext_resource type="Script" path="res://prefabs/hurtbox.gd" id="11_lcwrx"]
[ext_resource type="Script" path="res://prefabs/hitbox.gd" id="12_iw7u0"]
[ext_resource type="Script" path="res://entities/stat_components/health/health_component.gd" id="13_qdbbm"]
[ext_resource type="PackedScene" uid="uid://t46k24na1k8a" path="res://ui/health_bar/health_bar.tscn" id="14_3ux41"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vnqbm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tfwga")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ss7p3")
}, {
"duration": 1.0,
"texture": ExtResource("1_i7qfw")
}, {
"duration": 1.0,
"texture": ExtResource("2_ya6ik")
}, {
"duration": 1.0,
"texture": ExtResource("3_q5jh6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_fk03e")
}, {
"duration": 1.0,
"texture": ExtResource("8_5bmjy")
}, {
"duration": 1.0,
"texture": ExtResource("9_0lfdx")
}, {
"duration": 1.0,
"texture": ExtResource("6_mvs22")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fef2l"]
size = Vector2(10, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87spn"]
size = Vector2(10, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eu67h"]
size = Vector2(10, 9)

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 224
script = ExtResource("1_bpcrd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vnqbm")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3.5)
shape = SubResource("RectangleShape2D_fef2l")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health_comp")]
script = ExtResource("11_lcwrx")
health_comp = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(1, 3.5)
shape = SubResource("RectangleShape2D_87spn")

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("12_iw7u0")
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1, 3.5)
shape = SubResource("RectangleShape2D_eu67h")

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("health_bar")]
script = ExtResource("13_qdbbm")
health_bar = NodePath("../HealthBar")

[node name="HealthBar" parent="." instance=ExtResource("14_3ux41")]
offset_left = -4.0
offset_top = -4.0
offset_right = 220.0
offset_bottom = 11.0
scale = Vector2(0.0446634, 0.108589)
